[gd_scene load_steps=3 format=3 uid="uid://c67hpk3pmed3s"]

[ext_resource type="Script" uid="uid://cy4uqdooshrvn" path="res://addons/gopotify/client.gd" id="1"]
[ext_resource type="Script" uid="uid://1is2cpgpaxsr" path="res://example/player.gd" id="2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Previous" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "<<"

[node name="PlayPause" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "|>"

[node name="Next" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = ">>"

[node name="SearchBox" type="TextEdit" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
scroll_fit_content_height = true

[node name="search" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "search"

[node name="UpdateQueue" type="Button" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
text = "update queue"

[node name="Gopotify" type="HTTPRequest" parent="."]
script = ExtResource("1")

[node name="SearchResult" type="ScrollContainer" parent="."]
layout_mode = 2
anchor_right = 0.287326
anchor_bottom = 1.0
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="SearchResult"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Queue" type="ScrollContainer" parent="."]
layout_mode = 2
anchor_left = 0.712674
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Queue"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="queuelabel" type="RichTextLabel" parent="Queue/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "Queue"
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/PlayPause" to="." method="_on_PlayPause_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/search" to="." method="_on_search_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/UpdateQueue" to="." method="_on_update_queue_pressed"]
